--- a/index.html
+++ b/index.html
@@ -84,7 +84,29 @@
         <!-- Your page content goes here -->
         <h1>Page Title</h1>
         <hr class="hr-thin">
-        <p>This is your content area. The header and footer are loaded as external partials.</p>
+<h6><a id="bio-by-chloe" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>bio by Chloe</h6>
+<h3><a id="personal-background" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>Personal Background</h3>
+<p>As a proud father of three grown daughters—one residing out of state and two living nearby—Brian cherishes the times they spend together. Soon to welcome a granddaughter into the family, he is committed to maintaining his health and embracing this new chapter in life. Despite getting older, he notes with a smile that he doesn’t quite look his age, a testament to his vibrant lifestyle and positive outlook.  Balancing a professional career, artistic pursuits, and family life, Brian emphasizes the importance of not rushing the creative process. He rides the waves of inspiration when they come and shifts focus when they wane, allowing his creativity to flow naturally. His role at UTHealth funds his passions for music and photography, enabling him to fully invest in his interests.</p>
+<h3><a id="professional-background" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>Professional Background</h3>
+<p>Brian Yegge is a seasoned Technology Analyst at The University of Texas Health Science Center Houston (UTHealth), where he has dedicated nearly 17 years to enhancing the technological capabilities of the institution. In his role, Brian assists medical students, faculty, physicians, and clinical staff with their technology needs and challenges. He brings extensive knowledge of Apple products into an environment predominantly experienced with Linux and Microsoft Windows systems, effectively bridging technological gaps. His expertise with EPIC Electronic Health Record (EHR) systems further supports the critical operations within UTHealth’s healthcare education and delivery.</p>
+<p><a href="https://www.linkedin.com/in/brianyegge">PROFESSIONAL RESUME</a></p>
+<h1><a id="music" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>MUSIC</h1>
+<h3><a id="solo-projects" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>SOLO PROJECTS</h3>
+<p><a href="https://hyperfollow.com/angershade">ANGERSHADE</a><br />
+<a href="https://hyperfollow.com/brianyegge">YEGGE</a><br />
+<a href="https://hyperfollow.com/thecorruptive">THE CORRUPTIVE</a></p>
+<h3><a id="bands-as-bassist-player-amp-contributor" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>BANDS (as bassist player &amp; contributor)</h3>
+<p><a href="https://soundcloud.com/primary-3">PRIMARY</a><br />
+<a href="https://youtube.com/playlist?list=PLyCI8LY_68Eg8lI-T3S59sN0bcunIz0hN&amp;si=ETW4D7sXyHIbmMT4">DEADBOLT ZEN</a><br />
+<a href="https://yegge.com/risen">RISEN</a></p>
+<h3><a id="the-influenza" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>THE INFLUENZA</h3>
+<h5><a id="my-playlists-of-influences" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>My Playlists of influences</h5>
+<p><a href="https://music.apple.com/us/playlist/the-influenza/pl.u-r07xXT5R3NL">APPLE MUSIC</a><br />
+<a href="https://youtube.com/playlist?list=PLyCI8LY_68EiYz2lZFkk-QOO02BtnyL_K&amp;si=3umdaClN43Ty-lbS">YOUTUBE VIDEO</a><br />
+<a href="https://youtube.com/playlist?list=PLyCI8LY_68Eh_Uug5y_DLUNGF1KA--u0g&amp;si=RAdhN803-FhIQqCO">YOUTUBE MUSIC</a></p>
+<hr />
+<p><a href="https://yegge.com/earlyyears">THE EARLY YEARS 1994 - 2009</a></p>
+
       </div>
     </main>
 
