--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
 <header class="header section">
   <div class="hdr">
     <a href="/" class="hdr__logo">
-      <img src="https://pub-81e2336ffbb0497489a11cd45f52892f.r2.dev/logo.png" alt="site logo" style="width:33%; height:auto;">">
+      <img src="https://pub-81e2336ffbb0497489a11cd45f52892f.r2.dev/logo.png" alt="site logo" style="width:33%; height:auto;">
     </a>
 
     <nav class="hdr__nav" aria-label="Primary">
