--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
     <main id="content" style="flex:1 0 auto;">
       <div class="page">
         <!-- Your page content goes here -->
+		<center> <h5> This site is a mess, but under construction.</h5></center>
+		<h3>Brian Yegge</h3>
         <hr class="hr-thin">
 <h6><a id="bio-by-chloe" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>bio by Chloe</h6>
 <h3><a id="personal-background" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>Personal Background</h3>
